# tremors-of-war

./: .dockerignore  .eslintrc.json  .gitignore  .prettierignore  Database.xlsx  Dockerfile  README.md  cypress.config.ts  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  cypress.yml
.storybook/: preview.cjs
cypress/e2e/: initialTest.cy.ts
cypress/e2e/pages/: AddUnitsZeroState.cy.ts  Faction.cy.ts  RuleSet.cy.ts  SetUnit.cy.ts  StartScreen.cy.ts
cypress/support/utils/: common.ts
data_parser/: .flake8  .mypy  constants.py  main.py  models.py  pyproject.toml  utils.py
data_parser/parsers/: abilities.py  armour.py  baseline.py  database.py  factions.py  mounts.py  relations.py  ruleset.py  units.py  weapons.py
data_parser/scripts/: qa
docker/: nginx.conf
src/: constants.ts  data.json  main.tsx  types.ts
src/app/: App.tsx  AppProvider.tsx  router.tsx  routes.ts  state.ts  theme.ts
src/components/: AddUnitViewHeader.tsx  AddUnitsViewFooter.tsx  ArmourSave.tsx  ChooseWarBandTotalDialog.tsx  ContentContainer.tsx  ExceededWarbandTotalAlert.tsx  MountUnitStats.tsx  NoUnitNameError.tsx  RestartConfirmationDialog.tsx  StartScreen.tsx
src/components/Weaponry/: WeaponryStats.tsx  WeaponryTraits.tsx
src/components/__stories__/: ChooseWarBandTotalDialog.stories.tsx  ContentContainer.stories.tsx
src/data/: database.json  index.ts  types.ts
src/stories/: Button.tsx
src/stories/components/: ContentContainer.stories.tsx  StartScreen.stories.tsx
src/utils/: armourSaveCalculations.ts  costs.ts
(+120 files in other folders)
