[tool.poetry]
name = "data-parser"
version = "0.1.0"
description = ""
authors = ["fargusplumdoodle <fargusplumdoodle@gmail.com>"]
readme = "README.md"
packages = [{include = "data_parser"}]

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.0.10"
pylightxl = "^1.60"


[tool.poetry.dev-dependencies]
black = "^22.12.0"
mypy = "^0.991"
flake8 = "^6.0.0"
types-openpyxl = "^3.0.4"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
